--- a/static/styles/global.css
+++ b/static/styles/global.css
@@ -14,6 +14,16 @@ body {
     padding: 20px;
 }
 
+button, input[type="submit"], input[type="reset"] {
+	background: none;
+	color: inherit;
+	border: none;
+	padding: 0;
+	font: inherit;
+	cursor: pointer;
+	outline: inherit;
+}
+
 .app-container {
     background: white;
     border-radius: 20px;
