--- a/src/app.css
+++ b/src/app.css
@@ -1,5 +1,5 @@
 /* Browsers require that @import statements come before any other rules, so URL imports need to be above imports like @import "tailwindcss" which are inlined in the compiled CSS. */
-@import url('https://fonts.googleapis.com/css2?family=Chiron+Sung+HK:ital,wght@0,200..900;1,200..900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Chiron+Sung+HK:ital,wght@0,200..900;1,200..900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
 @import 'tailwindcss';
 @theme {
     --color-amber-111: #ffede4;
@@ -10,6 +10,7 @@
     --default-font-variation-settings: 'wght' 550;
     --font-family-roboto: 'Roboto', sans-serif;
     --font-family-csh: 'Chiron Sung HK', serif;
+    --font-family-bebas: 'Bebas Neue', sans-serif;
 }
 
 .disable {
